<resources>
    <string name="app_name">Adeyinka_iBook</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="book_title">iBook</string>
    <string name="msg_text">Reading is a conversation.All book’s talk but a good book listens as well</string>
    <string name="get_started">Get Started</string>
    <string name="swing_text">You’re all set and ready to starting your favorite books.</string>
    <string name="proceed_btn_text">Proceed</string>
    <string name="swing_img">swingingImg</string>
    <string name="logo_text">TODO</string>
    <string name="singin_image">singInImage</string>
    <string name="topImage">TODO</string>
    <string name="sign_in_text">Sign In</string>
    <string name="signin_msg">We’re glad to have you back</string>
    <string name="email_address_text">Email Address</string>
    <string name="example_mail_input">example@mail.com</string>
    <string name="password_text">Password</string>
    <string name="sign_in_btn">sign in</string>
    <string name="new_acct_setup">New to iBook? Set up an account</string>
    <string name="sing_up_text">Sing Up</string>
    <string name="bkgrd_img">bkgrd_img</string>
    <string name="logo_signUp">logo</string>
    <string name="singUp_msg">There’s lots in store for you</string>
    <string name="fName_signUp">First Name</string>
    <string name="fName_hint">Enter First Name Here</string>
    <string name="sName_text">Surname Name</string>
    <string name="sName_hint">Enter Surname Name Here</string>
    <string name="user_name_text">User Name</string>
    <string name="username_hint">Your Username</string>
    <string name="password_hint">Password</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="sName_input_text">Enter Surname Name Here</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="btn_text">Get Started</string>
    <string name="username_text">User Name</string>
</resources>