<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.SignUpFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="350dp"
        android:src="@drawable/image_4"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/bkgrd_img" />

    <ImageView
        android:layout_width="79dp"
        android:layout_height="36dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/ibook_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/logo_signUp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="560dp"
        android:orientation="vertical"
        android:layout_marginTop="180dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/white"
        >
        <TextView
            android:id="@+id/signUpTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sing_up_text"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/signUpMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/singUp_msg"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/fNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fName_signUp"
            android:textSize="16sp"
            android:textColor="#3A3A3A"
            android:textStyle="normal"
            android:textFontWeight="600"
            android:layout_marginStart="20dp"
            android:layout_marginTop="35dp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fNameInputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/fName_hint"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/sNameTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sName_text"
            android:textSize="16sp"
            android:textColor="#3A3A3A"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/sName_input_text"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/userNameTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username_text"
            android:textSize="16sp"
            android:textColor="#3A3A3A"
            android:textStyle="normal"
            android:textFontWeight="600"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/username_hint"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/passwordTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_text"
            android:textSize="16sp"
            android:textColor="#3A3A3A"
            android:textStyle="normal"
            android:textFontWeight="600"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            app:passwordToggleEnabled="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/getStartedBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_text"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/teal_300"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>