<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.SignInFragment">

    <ImageView
        android:id="@+id/logoImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48.9dp"
        android:layout_marginTop="46.47dp"
        android:contentDescription="@string/logo_text"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/womanImg"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_marginTop="19dp"
        android:contentDescription="@string/singin_image"
        android:scaleType="centerCrop"
        android:src="@drawable/image_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoImg"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/logoTop"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginStart="60dp"
        android:contentDescription="@string/topImage"
        android:scaleType="fitStart"
        android:src="@drawable/imgtoplabel"
        app:layout_constraintBottom_toTopOf="@id/signInTxt"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/signInTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_text"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/womanImg"
        />

    <TextView
        android:id="@+id/signInMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin_msg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signInTxt"
        android:layout_marginStart="48dp"
        android:layout_marginTop="3dp"/>

    <TextView
        android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_address_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signInMsg"
        android:layout_marginStart="48dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/emailInputTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:hint="@string/example_mail_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailText"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailInputTxt"
        android:layout_marginStart="48dp"
        android:layout_marginTop="3dp"
        android:textStyle="bold"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/passwordText"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        app:endIconMode="password_toggle"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signInBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="48dp"
        android:background="@color/teal_300"
        android:text="@string/sign_in_btn"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="normal"
        app:backgroundTint="@color/teal_300"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordInput"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/signUpOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_acct_setup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="92dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="62dp"
        android:clickable="true"/>

</androidx.constraintlayout.widget.ConstraintLayout>