<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.ProceedSplashScreenFragment">

    <ImageView
        android:id="@+id/swingImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:src="@drawable/swinging"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/swing_img" />

    <TextView
        android:id="@+id/swingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="60dp"
        android:text="@string/swing_text"
        android:textSize="20sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/proceedBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/proceed_btn_text"
        android:layout_marginTop="30dp"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="60dp"
        android:backgroundTint="@color/teal_300"/>


</LinearLayout>